refactored code with exception handler and java 8 stream apis